# coincall-rfq-maker

./: .env.example  .gitignore  README.md  api_client.py  interfaces.py  logging_config.py  main.py  market_data.py  market_maker.py  models.py  pricing_engine.py  pyproject.toml  quote_manager.py  rfq_manager.py  websocket_client.py  ws_handler_testnet.py
src/coincall_rfq_maker/: __init__.py  cli.py  dispatch_queue.py  events.py  observability.py  orchestration.py  reconciler.py  settings.py  ws.py
src/coincall_rfq_maker/adapters/: __init__.py  rest.py  schemas.py  signing.py  ws.py
src/coincall_rfq_maker/core/: __init__.py  clock.py  config.py
src/coincall_rfq_maker/core/adapters/: rest.py  schemas.py  signing.py
src/coincall_rfq_maker/domain/: __init__.py  instruments.py  quote.py  rfq.py
src/coincall_rfq_maker/e2e/: __init__.py  cli.py  constants.py  core.py
src/coincall_rfq_maker/marketdata/: __init__.py  instruments.py  service.py
src/coincall_rfq_maker/persistence/: __init__.py  outbox.py  store.py
src/coincall_rfq_maker/pricing/: __init__.py  engine.py  rounding.py
src/coincall_rfq_maker/quoting/: __init__.py  api_accounting.py  lifecycle.py  store.py  strategy.py
src/coincall_rfq_maker/risk/: __init__.py  gate.py
src/coincall_rfq_maker/taker/: __init__.py  audit.py  cli.py  client.py  execute.py  scenarios.py  settings.py
src/coincall_rfq_maker/testing/: __init__.py  fake_exchange.py  scenarios.py
tests/: conftest.py  test_cli.py  test_dispatch_queue.py  test_observability.py  test_orchestration.py  test_projection_reducers.py  test_scenarios.py  test_settings.py  test_transient_outage_gate.py  test_ws_parsing.py
tests/adapters/: test_rest_body_encoding.py  test_rest_retry.py  test_schemas.py  test_signing.py  test_taker_rest_endpoints.py  test_ws_parsing.py
tests/core/adapters/: test_rest_body_encoding.py  test_rest_retry.py  test_schemas.py  test_signing.py
tests/domain/: test_instruments.py  test_quote.py  test_rfq.py
tests/e2e/: __init__.py  test_cli.py  test_core.py  test_markers.py
tests/marketdata/: test_instrument_catalog.py  test_service.py
tests/persistence/: test_outbox.py  test_store.py
tests/pricing/: test_engine.py  test_rounding.py
tests/quoting/: test_api_accounting.py  test_lifecycle.py  test_strategy.py
tests/risk/: test_gate.py
tests/taker/: __init__.py  test_audit.py  test_client.py  test_execute.py  test_scenarios.py  test_settings.py  test_taker_cli.py  test_taker_rest_endpoints.py  test_trade.py
