[project]
name = "coincall-rfq-maker"
version = "0.1.0"
description = "Async Coincall option RFQ market maker: prices RFQ legs with Black-Scholes, risk-gates, and quotes/re-quotes over REST while tracking state via WebSocket."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "aiosqlite>=0.22.1",
    "numpy>=2.3.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "scipy>=1.16.1",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "import-linter>=2.13",
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[project.scripts]
rfq-maker = "coincall_rfq_maker.cli:run"
rfq-taker = "coincall_rfq_maker.taker.cli:run"
rfq-e2e = "coincall_rfq_maker.e2e.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coincall_rfq_maker"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# Architecture boundary: the maker is the product (package root); `core` is the shared
# Coincall client; `taker` is a subordinate tool. Enforced locally by the pre-push hook
# (`uv run lint-imports`) — no GitHub CI. See .claude/repo-brief.md.
[tool.importlinter]
root_package = "coincall_rfq_maker"

[[tool.importlinter.contracts]]
name = "ws is a parser: must not import risk"
type = "forbidden"
source_modules = ["coincall_rfq_maker.ws"]
forbidden_modules = ["coincall_rfq_maker.risk"]

[[tool.importlinter.contracts]]
name = "core, domain and taker must not import maker-product modules"
type = "forbidden"
source_modules = [
    "coincall_rfq_maker.core",
    "coincall_rfq_maker.domain",
    "coincall_rfq_maker.taker",
]
forbidden_modules = [
    "coincall_rfq_maker.cli",
    "coincall_rfq_maker.orchestration",
    "coincall_rfq_maker.reconciler",
    "coincall_rfq_maker.events",
    "coincall_rfq_maker.observability",
    "coincall_rfq_maker.ws",
    "coincall_rfq_maker.settings",
    "coincall_rfq_maker.marketdata",
    "coincall_rfq_maker.pricing",
    "coincall_rfq_maker.quoting",
    "coincall_rfq_maker.risk",
    "coincall_rfq_maker.persistence",
]

[[tool.importlinter.contracts]]
name = "layered client: taker over core over domain"
type = "layers"
layers = [
    "coincall_rfq_maker.taker",
    "coincall_rfq_maker.core",
    "coincall_rfq_maker.domain",
]
